fix options output for bool type

--- a/docs/templates/plugin.rst.j2
+++ b/docs/templates/plugin.rst.j2
@@ -119,7 +119,7 @@ Options
                 {# choices #}
                 <td>
                     <div class="cell-border">
-                        {% if value.type == 'boolean' %}
+                        {% if value.type == 'bool' %}
                             <ul>
                                 <li>yes</li>
                                 <li>no</li>
