--- a/docs/templates/config.rst.j2
+++ b/docs/templates/config.rst.j2
@@ -6,9 +6,9 @@
 {{name}}
 {{ '=' * name_len }}
 
-Ansible supports a few ways of providing configuration variables, mainly through environment variables, command line switches and an ini file `ansible.cfg`.
+Ansible supports a few ways of providing configuration variables, mainly through environment variables, command line switches and an ini file ``ansible.cfg``.
 
-Starting at Ansible 2.4 the `ansible-config` utility allows users to see all the configuration settings available, their defaults, how to set them and
+Starting at Ansible 2.4 the ``ansible-config`` utility allows users to see all the configuration settings available, their defaults, how to set them and
 where their current value comes from. See :doc:ansible-config for more information.
 
 
@@ -17,20 +17,21 @@ The configuration file
 
 Changes can be made and used in a configuration file which will be searched for in the following order:
 
- * ANSIBLE_CONFIG (environment variable if set)
- * ansible.cfg (in the current directory)
- * ~/.ansible.cfg (in the home directory)
- * /etc/ansible/ansible.cfg
+ * ``ANSIBLE_CONFIG`` (environment variable if set)
+ * ``ansible.cfg`` (in the current directory)
+ * ``~/.ansible.cfg`` (in the home directory)
+ * ``/etc/ansible/ansible.cfg``
 
 Ansible will process the above list and use the first file found, all others are ignored.
 
-.. note:: Comments
-    The configuration file is one variant of an INI format.
-	Both the hash sign ("#") and semicolon (";") are allowed as
-    comment markers when the comment starts the line.
-    However, if the comment is inline with regular values,
-    only the semicolon is allowed to introduce the comment.
-	For instance::
+.. note::
+
+   The configuration file is one variant of an INI format.
+   Both the hash sign (``#``) and semicolon (``;``) are allowed as
+   comment markers when the comment starts the line.
+   However, if the comment is inline with regular values,
+   only the semicolon is allowed to introduce the comment.
+   For instance::
 
         # some basic default values...
         inventory = /etc/ansible/hosts  ; This points to the file that lists your hosts
