--- a/docs/templates/plugin.rst.j2
+++ b/docs/templates/plugin.rst.j2
@@ -66,7 +66,7 @@ Aliases: @{ ','.join(aliases) }@
 {% if requirements %}
 {% set req = 'Requirements' %}
 {% if plugin_type == 'module' %}
-{% set req = req + ' (on managed node)' %}
+{% set req = req + ' (on each managed node)' %}
 {% endif %}
 {% set req_len = req|length %}
 @{ req }@
