Add ./ansible.cfg to docs where missing

--- a/docs/templates/cli_rst.j2
+++ b/docs/templates/cli_rst.j2
@@ -117,6 +117,8 @@ Files
 
 :file:`~/.ansible.cfg` -- User config file, overrides the default config if present
 
+:file:`./ansible.cfg` -- User config file, overrides the default config and ~/.ansible.cfg if present
+
 Author
 ======
 
