--- a/docs/templates/man.j2
+++ b/docs/templates/man.j2
@@ -99,6 +99,8 @@ FILES
 
 ~/.ansible.cfg -- User config file, overrides the default config if present
 
+./ansible.cfg -- User config file, overrides the default config and ~/.ansible.cfg if present
+
 
 AUTHOR
 ------
