--- a/docs/templates/list_of_CATEGORY_plugins.rst.j2
+++ b/docs/templates/list_of_CATEGORY_plugins.rst.j2
@@ -14,6 +14,9 @@
 {% endif %}
 
 {% for name, info in subcategories.items() | sort %}
+
+.. _@{ name.lower() }@_plugins:
+
 @{ name.title() }@
 @{ '-' * name | length }@
 
