--- a/docs/templates/plugin.rst.j2
+++ b/docs/templates/plugin.rst.j2
@@ -116,7 +116,7 @@ Options
                 {# required #}
                 <td><div class="cell-border">{% if value.get('required', False) %}required{% endif %}</div></td>
                 {# default value #}
-                <td><div class="cell-border">{% if value.default is string %}@{ value.default | html_ify }@{% else %}@{ value.default }@{% endif %}</div></td>
+                <td><div class="cell-border">{% if value.default %}@{ value.default | html_ify }@{% endif %}</div></td>
                 {# choices #}
                 <td>
                     <div class="cell-border">
