[WIP] Backport/2.5/multiple docs (#36907)
Backport/2.5/multiple docs

--- a/docs/templates/plugin.rst.j2
+++ b/docs/templates/plugin.rst.j2
@@ -1,14 +1,15 @@
+:source: @{ source }@
+
 .. _@{ module }@:
 
 {% if short_description %}
-{% set title = module + ' - ' + short_description|convert_symbols_to_format %}
+{%   set title = module + ' - ' + short_description|convert_symbols_to_format %}
 {% else %}
-{% set title = module %}
+{%   set title = module %}
 {% endif %}
-{% set title_len = title|length %}
 
 @{ title }@
-@{ '+' * title_len }@
+@{ '+' * title|length }@
 
 {% if version_added is defined and version_added != '' -%}
 .. versionadded:: @{ version_added | default('') }@
@@ -46,13 +47,13 @@ Synopsis
 
 {% if description %}
 
-{% if description is string -%}
+{%   if description is string -%}
 * @{ description | convert_symbols_to_format }@
-{% else %}
-{% for desc in description -%}
+{%   else %}
+{%     for desc in description -%}
 * @{ desc | convert_symbols_to_format }@
-{% endfor %}
-{% endif %}
+{%     endfor %}
+{%   endif %}
 
 {% endif %}
 
@@ -64,17 +65,16 @@ Aliases: @{ ','.join(aliases) }@
 {% endif %}
 
 {% if requirements %}
-{% set req = 'Requirements' %}
-{% if plugin_type == 'module' %}
-{% set req = req + ' (on host that executes module)' %}
-{% endif %}
-{% set req_len = req|length %}
-@{ req }@
-@{ '-' * req_len }@
+{%   set req_title = 'Requirements' %}
+{%   if plugin_type == 'module' %}
+{%     set req_title = req_title + ' (on host that executes module)' %}
+{%   endif %}
+@{ req_title }@
+@{ '-' * req_title|length }@
 
-{% for req in requirements %}
-  * @{ req | convert_symbols_to_format }@
-{% endfor %}
+{%   for req in requirements %}
+* @{ req | convert_symbols_to_format }@
+{%   endfor %}
 
 {% endif %}
 
@@ -89,14 +89,13 @@ Options
     <table  border=0 cellpadding=0 class="documentation-table">
         {# Header of the documentation #}
         <tr>
-            <th class="head"><div class="cell-border">parameter</div></th>
-            <th class="head"><div class="cell-border">required</div></th>
-            <th class="head"><div class="cell-border">default</div></th>
-            <th class="head"><div class="cell-border">choices</div></th>
+            <th class="head"><div class="cell-border">Parameter</div></th>
+            <th class="head"><div class="cell-border">Default</div></th>
+            <th class="head"><div class="cell-border">Choices</div></th>
             {% if plugin_type != 'module' %}
-                <th class="head"><div class="cell-border">configuration</div></th>
+                <th class="head"><div class="cell-border">Configuration</div></th>
             {% endif %}
-            <th class="head"><div class="cell-border">comments</div></th>
+            <th class="head"><div class="cell-border">Comments</div></th>
         </tr>
         {% for key, value in options|dictsort recursive %}
             <tr class="return-value-column">
@@ -108,14 +107,14 @@ Options
                             </div>
                         {% endfor %}
                         <div class="elbow-key">
-                            @{ key }@<br/><div style="font-size: small;">{% if value.version_added %} (added in @{value.version_added}@){% endif %}</div>
+                            <b>@{ key }@</b>
+                            {% if value.get('required', False) %}<br/><div style="font-size: small; color: red">required</div>{% endif %}
+                            {% if value.version_added %}<br/><div style="font-size: small; color: darkgreen">(added in @{value.version_added}@)</div>{% endif %}
                         </div>
                     <div class="outer-elbow-container">
                 </td>
-                {# required #}
-                <td><div class="cell-border">{% if value.get('required', False) %}yes{% else %}no{% endif %}</div></td>
                 {# default value #}
-                <td><div class="cell-border">{% if value.default %}@{ value.default }@{% endif %}</div></td>
+                <td><div class="cell-border">{% if value.default %}@{ value.default | html_ify }@{% endif %}</div></td>
                 {# choices #}
                 <td>
                     <div class="cell-border">
@@ -187,6 +186,19 @@ Options
     </br>
 
 {% endif %}
+{% if notes -%}
+
+
+Notes
+-----
+
+.. note::
+{%   for note in notes %}
+    - @{ note | convert_symbols_to_format }@
+{%   endfor %}
+
+
+{% endif %}
 {% if examples or plainexamples -%}
 
 
@@ -195,11 +207,11 @@ Examples
 
 .. code-block:: yaml
 
-{% for example in examples %}
-{% if example['description'] %}@{ example['description'] | indent(4, True) }@{% endif %}
+{%   for example in examples %}
+{%     if example['description'] %}@{ example['description'] | indent(4, True) }@{% endif %}
 @{ example['code'] | escape | indent(4, True) }@
-{% endfor %}
-{% if plainexamples %}@{ plainexamples | indent(4, True) }@{% endif %}
+{%   endfor %}
+{%   if plainexamples %}@{ plainexamples | indent(4, True) }@{% endif %}
 {% endif %}
 
 
@@ -209,17 +221,17 @@ Examples
 Return Values
 -------------
 
-Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this {{plugin_type}}:
+Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this @{ plugin_type }@:
 
 .. raw:: html
 
     <table border=0 cellpadding=0 class="documentation-table">
         <tr>
-            <th class="head"><div class="cell-border">name</div></th>
-            <th class="head"><div class="cell-border">description</div></th>
-            <th class="head"><div class="cell-border">returned</div></th>
-            <th class="head"><div class="cell-border">type</div></th>
-            <th class="head"><div class="cell-border">sample</div></th>
+            <th class="head"><div class="cell-border">Name</div></th>
+            <th class="head"><div class="cell-border">Description</div></th>
+            <th class="head"><div class="cell-border">Returned</div></th>
+            <th class="head"><div class="cell-border">Type</div></th>
+            <th class="head"><div class="cell-border">Sample</div></th>
         </tr>
         {% for key, value in returndocs|dictsort recursive %}
             <tr class="return-value-column">
@@ -230,7 +242,7 @@ Common return values are documented :ref:`here <common_return_values>`, the foll
                             </div>
                         {% endfor %}
                         <div class="elbow-key">
-                            @{ key }@
+                            <b>@{ key }@</b>
                         </div>
                     </div>
                 </td>
@@ -243,9 +255,9 @@ Common return values are documented :ref:`here <common_return_values>`, the foll
                     {% endfor %}
                     {% endif %}
                 </td>
-                <td align=center><div class="cell-border">@{ value.returned }@</div></td>
-                <td align=center><div class="cell-border">@{ value.type }@</div></td>
-                <td align=center><div class="cell-border">@{ value.sample | replace('\n', '\n    ') | html_ify }@</div></td>
+                <td><div class="cell-border">@{ value.returned }@</div></td>
+                <td><div class="cell-border">@{ value.type }@</div></td>
+                <td><div class="cell-border">@{ value.sample | replace('\n', '\n    ') | html_ify }@</div></td>
             </tr>
             {# ---------------------------------------------------------
              # sadly we cannot blindly iterate through the child dicts,
@@ -265,48 +277,35 @@ Common return values are documented :ref:`here <common_return_values>`, the foll
 {% endif %}
 
 
-{% if notes -%}
-
-
-Notes
------
-
-.. note::
-{% for note in notes %}
-    - @{ note | convert_symbols_to_format }@
-{% endfor %}
-
-
-{% endif %}
 {% if author is defined -%}
 
 
 Author
 ~~~~~~
 
-{% for author_name in author %}
-    * @{ author_name }@
-{% endfor %}
+{%   for author_name in author %}
+* @{ author_name }@
+{%   endfor %}
 
 
 {% endif %}
 {% if not deprecated %}
-{% set support = { 'core': 'The Ansible Core Team', 'network': 'The Ansible Network Team', 'certified': 'an Ansible Partner', 'community': 'The Ansible Community', 'curated': 'A Third Party'} %}
-{% set module_states = { 'preview': 'it is not guaranteed to have a backwards compatible interface', 'stableinterface': 'the maintainers for this module guarantee that no backward incompatible interface changes will be made'} %}
-{% if metadata %}
-{% if metadata.status %}
+{%   set support = { 'core': 'The Ansible Core Team', 'network': 'The Ansible Network Team', 'certified': 'an Ansible Partner', 'community': 'The Ansible Community', 'curated': 'A Third Party'} %}
+{%   set module_states = { 'preview': 'it is not guaranteed to have a backwards compatible interface', 'stableinterface': 'the maintainers for this module guarantee that no backward incompatible interface changes will be made'} %}
+{%   if metadata %}
+{%     if metadata.status %}
 
 
 Status
 ~~~~~~
 
-{% for cur_state in  metadata.status %}
+{%       for cur_state in metadata.status %}
 This module is flagged as **@{cur_state}@** which means that @{module_states[cur_state]}@.
-{% endfor %}
+{%       endfor %}
 
 
-{% endif %}
-{% if metadata.supported_by in ('core', 'network') %}
+{%     endif %}
+{%     if metadata.supported_by in ('core', 'network') %}
 
 
 Maintenance Info
@@ -315,9 +314,8 @@ Maintenance Info
 For more information about Red Hat's support of this @{ plugin_type }@,
 please refer to this `Knowledge Base article <https://access.redhat.com/articles/rhel-top-support-policies/>`_
 
-{% endif %}
-{% endif %}
+{%     endif %}
+{%   endif %}
 {% endif %}
 
-If you want to help with development, please read :doc:`../../community/index`,
-:doc:`../../dev_guide/testing` and {% if plugin_type == 'module' %}:doc:`../../dev_guide/developing_modules`{% else %}:doc:`../../dev_guide/developing_plugins`{% endif %}.
+If you notice any issues in this documentation you can `edit this document <https://github.com/ansible/ansible/edit/devel/lib/ansible/modules/@{ source }@?description=%3C!---%20Your%20description%20here%20--%3E%0A%0A+label:%20docsite_pr>`_ to improve it.
